--- a/css/nivo-slider.css
+++ b/css/nivo-slider.css
@@ -4,7 +4,7 @@
  *
  * Copyright 2012, Dev7studios
  * Free to use and abuse under the MIT license.
- * http://www.opensource.org/licenses/mit-license.php
+ * http://www.opensource.org/licenses/mit-license.html
  */
  
 /* The Nivo Slider styles */
